updated validations for incoming messages